src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #2673BB;
  --ifm-color-primary-dark: #2673BB;
  --ifm-color-primary-darker: #2673BB;
  --ifm-color-primary-darkest: #2673BB;
  --ifm-color-primary-light: #2673BB;
  --ifm-color-primary-lighter: #2673BB;
  --ifm-color-primary-lightest: #2673BB;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #2673BB;
  --ifm-color-primary-dark: #2673BB;
  --ifm-color-primary-darker: #2673BB;
  --ifm-color-primary-darkest: #2673BB;
  --ifm-color-primary-light: #2673BB;
  --ifm-color-primary-lighter: #2673BB;
  --ifm-color-primary-lightest: #2673BB;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.dropdown-separator {
  margin: 0.3rem 0;
}

.markdown h1:first-child {
  --ifm-h1-font-size: 2.25rem;
}

/* Make the sidebar navigation text smaller (default font size is 12pt). */
.menu {
  font-size: 11pt;
}

/* Make the arrow in the sidebar navigation smaller (default font size is 12pt). */
.menu__link--sublist-caret:after {
  background: var(--ifm-menu-link-sublist-icon) 50% / 1.25rem 1.25rem;
}

/* Make the arrow in the sidebar navigation smaller (default font size is 12pt). Added this because making only some categories clickable indexes causes the icon to revert to the default size. */
.clean-btn:before {
  background: var(--ifm-menu-link-sublist-icon) 50% / 1.25rem 1.25rem;
}

.version-out-of-support, .version-out-of-support a {
  background-color: #9CA3AF;
  color: #1c1e21;
  opacity: 85%;
}

/* Announcement Bar */
div[class^='announcementBar'] {
  font-size: 1.1rem;
  padding: 20px 0;
  z-index: 21; /* Ensures the announcement bar stays visible when images are zoomed in on */
}

/* Home page cards */

.card {
  border: 1px solid #ebedf0;
}

.card a {
  color: var(--ifm-color-content);
}

.card a:hover {
  background-color: #2673BB;
  color: white;
  text-decoration: none;
}

/* GitHub icon */

.header-github-link::before {
  display: block;
  background-image: url("/img/github-mark.svg");
  background-size: contain;
  content: "";
  width: 24px;
  height: 24px;
}

.header-github-link svg {
  display: none;
}

.header-github-link:hover {
  opacity: 0.7;
}

html[data-theme="dark"] .header-github-link::before {
  filter: invert(100%);
}

html[data-theme="dark"] .navbar-sidebar .header-github-link {
  filter: invert(0%);
}

/* Make tags appear above doc title (tags are natively at the bottom of docs in Docusaurus) */

.badge {
  border: none;
  display: flow-root;
  font-size: 85%;
  line-height: 2;
  margin: 0.25rem 0 1rem 0;
  padding-top: 0.5rem;
  width: -webkit-fill-available;
}

.theme-doc-footer-tags-row {
  display: inline-flex;
  float: inline-end;
}

.margin-top--sm, .margin-vert--sm {
  margin-top: 0 !important;
}

.margin-left--sm {
  margin-left: 0 !important;
}

a[class^='tag_'] {
  background-color: #2673BB;
  border: 2px solid #2673BB;
  color: white;
  font-weight: bold;

  /* &:hover {
    border: 2px solid #78C740;
  } */
}

html[data-theme="dark"] .badge {
  background-color: #252526;
  border: none;
  color: white;
}

html[data-theme="dark"] a[class^='tag_'] {
  background-color: #2673BB;
  border: 2px solid #2673BB;
  color: white;
  font-weight: bold;

  /* &:hover {
    border: 2px solid #78C740;
  } */
}

/* The following Font Awesome-related styles are for the question mark next to the Editions tags. These styles are currently not being used but might be useful later. */
a[class^='fa-solid fa-circle-question'] {
  color: #6B7280;
  vertical-align: middle;

  &:hover {
    color: #78C740;
  }
}

html[data-theme="dark"] a[class^='fa-solid fa-circle-question'] {
  color: #9CA3AF;
  vertical-align: middle;

  &:hover {
    color: #78C740;
  }
}

/* Edition tag bar: Question-mark icon tooltip container */
.tooltip {
  position: relative;
  display: inline-block;
  /* border-bottom: 1px dotted black; */ /* If you want dots under the hoverable text */
}

/* Question-mark icon tooltip text */
.tooltip .tooltiptext {
  background-color: #6c6c6c;
  border-radius: 5px;
  color: white;
  font-size: 12px;
  padding: 3px 10px;
  position: absolute;
  text-align: center;
  text-wrap: nowrap;
  visibility: hidden;
  width: auto;
  z-index: 1;
  top: -2px;
  left: 125%;
}

/* Show the Question-mark icon tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

/* Glossary tooltip styles */
.glossary-term {
  cursor: help;
  text-decoration: underline dotted;
}

.tooltip-glossary {
  background-color: #f6f6f6;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  left: 15px;
  opacity: 1;
  position: absolute;
  padding: 10px 15px;
  transform: translateY(5px);
  visibility: visible;
  white-space: normal;
  width: 460px;
  z-index: 10;
}

html[data-theme="dark"] .tooltip-glossary {
  background-color: var(--ifm-dropdown-background-color);
  border: 1px solid var(--ifm-table-border-color);
  border-radius: 4px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  opacity: 1;
  position: absolute;
  padding: 10px 15px;
  transform: translateY(5px);
  visibility: visible;
  white-space: normal;
  width: 460px;
  z-index: 10;
}

@media (max-width: 997px) {
  .tooltip-glossary {
    left: 15px !important;
    width: 333px !important;
  }
}

/* Support button and dropdown */
.supportDropdown {
  display: inline-block;
  position: relative;
}

.supportDropdownContent {
  background-color: #f9f9f9;
  border-radius: 8px;
  box-shadow: var(--ifm-global-shadow-md);
  color: var(--ifm-color-emphasis-700);
  font-size: 14px;
  min-width: 303px;
  opacity: 0;
  overflow: hidden;
  padding: 8px 0px;
  position: absolute;
  right: 0;
  transform: translateY(-10px);
  transition: opacity 0.3s ease-out, transform 0.3s ease-out;
  visibility: hidden;
  z-index: 1;
}

.supportDropdown:hover .supportDropdownContent {
  visibility: visible;
  opacity: 1;
  transform: translateY(0);
}

.supportDropdownContent {
  transition-delay: 0.1s;
}

.supportDropBtn {
  align-items: center;
  background-color: inherit;
  border: 0;
  border-radius: var(--ifm-badge-border-radius);
  color: var(--ifm-navbar-link-color);
  cursor: pointer;
  display: flex;
  font-family: var(--ifm-font-family-base);
  font-size: 14.5px;
  font-weight: var(--ifm-font-weight-semibold);
  justify-content: space-between;
  min-width: 145px;
  padding: 6px 0;
  text-align: left;
  z-index: 1;
}

.supportDropBtn svg { /* Keep dropdown open when moving the mouse between text and icon. */
  pointer-events: none;
}

.supportDropdown:hover .supportDropBtn {
  color: var(--ifm-color-primary);
}

@media (max-width: 996px) {
  .supportDropBtn {
    font-size: 15px;
  }
  .supportDropdownContent {
    font-size: 15px;
    left: 0;
    min-width: 320px;
  }
}

.supportDropdownContent a {
  color: var(--ifm-dropdown-link-color);
  display: block;
  margin: 4px 10px;
  padding: 4px 10px;
  text-decoration: none;
}

.supportDropdownContent a:hover {
  background-color: var(--ifm-dropdown-hover-background-color);
  border-radius: 8px;
  overflow: hidden;
}

html[data-theme="dark"] .supportDropBtn {
  background-color: inherit;
  border: 0;
  color: #f9f9f9;
}

html[data-theme="dark"] .supportDropdownContent {
  background-color: var(--ifm-dropdown-background-color);

  a {
    color: #f9f9f9;
  }
}

hr {
  text-align: center;
  margin: auto;
  max-width: 91%;
}

html[data-theme="dark"] .container img[src$=".png"] { /* Adds a white background to transparent .png images. */
  background-color: #ffffff;
}

.medium-zoom-overlay {
  z-index: 15;
  position: fixed;
}

.medium-zoom-image {
  z-index: 20;
  position: relative;
}

/* In-site notification feature */
.notification-wrapper {
  position: relative;
  cursor: pointer;
  padding: 8px;
}

.notification-count {
  position: absolute;
  top: 0;
  right: 0;
  background-color: #ff4444;
  color: white;
  border-radius: 50%;
  padding: 0.2rem 0.2rem;
  font-size: 0.8rem;
  min-width: 20px;
  height: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  transform: translate(30%, 15%);
}

.notification-dropdown {
  background-color: var(--ifm-dropdown-background-color);
  box-shadow: var(--ifm-global-shadow-md);
  border-radius: 8px;
  font-size: 0.875rem;
  right: 0px;
  position: absolute;
  text-decoration: none;
  top: 38px;
  width: 330px;
  z-index: 1000;
}

.notification-item {
  border-bottom: 3px solid none;
  color: inherit;
  display: block;
  padding: 10px;
  text-decoration: none;
}

.notification-item.unread {
  border-left: 5px solid #2673BB;
  border-bottom: 3px solid none;
  margin: 8px;
}

.notification-item {
  transition: background-color 0.2s ease;
}

.notification-item:last-child {
  border-bottom: none;
}

.notification-item:hover {
  background-color: var(--ifm-dropdown-hover-background-color);
  color: inherit;
  text-decoration: none;
}

html[data-theme="dark"] .notification-item {
  color: inherit;
  padding: 10px;
}

html[data-theme="dark"] .notification-item:hover {
  background-color: var(--ifm-dropdown-hover-background-color);
  text-decoration: none;
}

html[data-theme="dark"] .notification-dropdown {
  background-color: var(--ifm-dropdown-background-color);
  box-shadow: var(--ifm-global-shadow-md);
}

/* Hide the notification icon in the main navbar on smaller screens */
@media (max-width: 997px) {
  .notification-wrapper {
    display: none; /* Hide in the main navbar on mobile */
    position: sticky;
  }
}

/* Show notification icon in the sidebar menu on mobile */
@media (max-width: 997px) {
  .navbar-sidebar .notification-wrapper {
    display: flex; /* Make it visible only in the sidebar on mobile */
    margin-left: 5px;
    position: relative;
  }

  .notification-count {
    align-items: center;
    background-color: red;
    border-radius: 50%;
    color: white;
    display: flex;
    font-size: 0.8rem;
    height: 20px;
    justify-content: center;
    position: relative;
    right: 12px;
    top: -12px;
    width: 20px;
  }

  .notification-dropdown {
    background-color: var(--ifm-dropdown-background-color);
    box-shadow: var(--ifm-global-shadow-md);
    border-radius: 8px;
    font-size: 0.875rem;
    left: 0px;
    position: absolute;
    text-decoration: none;
    top: 38px;
    width: 330px;
    z-index: 1000;
  }
}

